force-app/main/default/objects/Account/fields/PipedriveID__c.field-meta.xml
<CustomField>
    <fullName>PipedriveID__c</fullName>
    <externalId>true</externalId>
    <label>PipedriveID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>