force-app/main/default/objects/Account/fields/Playground_Account__c.field-meta.xml
<CustomField>
    <fullName>Playground_Account__c</fullName>
    <description>Flags accounts owned by the Playground team (based on role name) and if active</description>
    <formula>IF(
AND(
 Owner.IsActive = TRUE,
CONTAINS( Owner.UserRole.Name , &quot;Playground&quot;)), TRUE, FALSE)</formula>
    <inlineHelpText>Flags accounts owned by an active Playground user</inlineHelpText>
    <label>Playground Account</label>
    <type>Checkbox</type>
</CustomField>