force-app/main/default/objects/Account/fields/Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Prepayment__c</fullName>
    <label>Prepayment</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>