force-app/main/default/objects/Account/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>