force-app/main/default/objects/Account/fields/Primary_Function__c.field-meta.xml
<CustomField>
    <fullName>Primary_Function__c</fullName>
    <label>Primary Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attribution</fullName>
            </value>
            <value>
                <fullName>Biz Dev</fullName>
            </value>
            <value>
                <fullName>Consultants</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Lead Gen</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>Presentation &amp; Fileshare</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>