force-app/main/default/objects/Account/fields/Primary_GumGum_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_GumGum_Contact__c</fullName>
    <label>Primary GumGum Contact</label>
    <type>Email</type>
</CustomField>