force-app/main/default/objects/Account/fields/Principal_Buying_Unit__c.field-meta.xml
<CustomField>
    <fullName>Principal_Buying_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal Buying Unit</label>
    <type>Checkbox</type>
</CustomField>