force-app/main/default/objects/Account/fields/Pro_rated__c.field-meta.xml
<CustomField>
    <fullName>Pro_rated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro-rated?</label>
    <type>Checkbox</type>
</CustomField>