force-app/main/default/objects/Account/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <description>This is a hidden field, used for a custom Sports report to calculate ratio of first time opps.</description>
    <formula>and(Opp_Count__c &lt; 2, Opp_Count__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect?</label>
    <type>Checkbox</type>
</CustomField>