force-app/main/default/objects/Account/fields/Publisher_ID__c.field-meta.xml
<CustomField>
    <fullName>Publisher_ID__c</fullName>
    <label>Publisher ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>