force-app/main/default/objects/Account/fields/Publisher_Out__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Out__c</fullName>
    <label>Publisher Out</label>
    <length>200</length>
    <type>Text</type>
</CustomField>