force-app/main/default/objects/Account/fields/Publisher_Tier__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Tier__c</fullName>
    <description>Publisher Tier is used to track the category of the Publisher Account Record</description>
    <label>Publisher Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid Tail / Long Tail</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>