force-app/main/default/objects/Account/fields/Q3_Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Q3_Forecasted_Revenue__c</fullName>
    <inlineHelpText>Forecasted Revenue for Q3 of this year based on the Sales Bottoms Up file</inlineHelpText>
    <label>Q3 Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>