force-app/main/default/objects/Account/fields/Regional_ROI_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Regional_ROI_Tracker__c</fullName>
    <label>Regional ROI Tracker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018 NA Sales Midwest Nordstrom Shopping Event</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - BATSU Event</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East Blue Hill at Stone Barn Dinner</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Cadreon Happy Hour</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Catch Dinner</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Converse Event</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Lululemon Shopping Event</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Manicure Event at BPI</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Pizza Making</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales East - Sur La Table Cooking Class</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales West STAPLES Kings vs Blues</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales West STAPLES Kings vs Maple Leafs</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales West STAPLES Lakers vs Golden State</fullName>
            </value>
            <value>
                <fullName>2017 NA Sales West STAPLES Lakers vs Pelicans</fullName>
            </value>
            <value>
                <fullName>2017 UK Cereal Killer Cafe</fullName>
            </value>
            <value>
                <fullName>2017 UK Mindshare Huddle</fullName>
            </value>
            <value>
                <fullName>Agency Thought Leaders NYC Dinner 7/25/17</fullName>
            </value>
            <value>
                <fullName>August NA Sales West Benefit 2017</fullName>
            </value>
            <value>
                <fullName>August NA Sales West Cuyana 2017</fullName>
            </value>
            <value>
                <fullName>August NA Sales West Hourglass 2017</fullName>
            </value>
            <value>
                <fullName>August NA Sales West Kiehl&apos;s 2017</fullName>
            </value>
            <value>
                <fullName>August NA Sales West Kiehls SF 2017</fullName>
            </value>
            <value>
                <fullName>August NA Sales West Sushi @ Carat 2017</fullName>
            </value>
            <value>
                <fullName>ESPYS 2017</fullName>
            </value>
            <value>
                <fullName>July NA Sales West Benefit 2017</fullName>
            </value>
            <value>
                <fullName>NA Sales Midwest Bruno Mars Concert 2017</fullName>
            </value>
            <value>
                <fullName>NA Sales Midwest Detroit City Soccer Game 2017</fullName>
            </value>
            <value>
                <fullName>NA Sales Midwest Detroit Thought Leadership Dinner 2017</fullName>
            </value>
            <value>
                <fullName>NA Sales Midwest DFWIMA iHack Sponsorship 2017</fullName>
            </value>
            <value>
                <fullName>NA Sales Midwest Eat. Drink. Critique! 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>