force-app/main/default/objects/Account/fields/Related_Agency__c.field-meta.xml
<CustomField>
    <fullName>Related_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use to this to specify if this Account works with/through another organization</description>
    <inlineHelpText>Use to this to specify if this Account works with/through another organization</inlineHelpText>
    <label>Related Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>