force-app/main/default/objects/Account/fields/Renewal_Date_Client_2__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_Client_2__c</fullName>
    <description>The date at which the current contract ends</description>
    <formula>Renewal_Date_Client__c</formula>
    <inlineHelpText>The date at which the current contract ends</inlineHelpText>
    <label>Target Renewal Date (Client) (2)</label>
    <type>Date</type>
</CustomField>