force-app/main/default/objects/Account/fields/RH_Category__c.field-meta.xml
<CustomField>
    <fullName>RH_Category__c</fullName>
    <description>Sub-Categories of Rights Holder accounts</description>
    <inlineHelpText>Sub-Categories of Rights Holder accounts</inlineHelpText>
    <label>RH Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Ownership Group</fullName>
            </value>
            <value>
                <fullName>Governing Body</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Media / Broadcaster</fullName>
            </value>
            <value>
                <fullName>Event / Organizer</fullName>
            </value>
            <value>
                <fullName>Venue / Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>