force-app/main/default/objects/Account/fields/ROI_Tracker__c.field-meta.xml
<CustomField>
    <fullName>ROI_Tracker__c</fullName>
    <label>National ROI Tracker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cannes Chicago</fullName>
            </value>
            <value>
                <fullName>Cannes LA</fullName>
            </value>
            <value>
                <fullName>Cannes London</fullName>
            </value>
            <value>
                <fullName>Hamptons 2017 Weekend 1</fullName>
            </value>
            <value>
                <fullName>Hamptons 2017 Weekend 2</fullName>
            </value>
            <value>
                <fullName>Hamptons 2017 Weekend 3</fullName>
            </value>
            <value>
                <fullName>Hamptons 2017 Weekend 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>