force-app/main/default/objects/Account/fields/SaaSOptics_Instance__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Instance__c</fullName>
    <description>Which instance of SaaSOptics is this Account aligned with?</description>
    <inlineHelpText>Which instance of SaaSOptics is this Account aligned with?</inlineHelpText>
    <label>SaaSOptics Instance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>