force-app/main/default/objects/Account/fields/SaaSOptics_No__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_No__c</fullName>
    <label>SaaSOptics Customer #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>