force-app/main/default/objects/Account/fields/SaaSOptics_Profile__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Profile__c</fullName>
    <description>Link to the SaaSOptics Customer Profile Page</description>
    <inlineHelpText>Link to the SaaSOptics Customer Profile Page</inlineHelpText>
    <label>SaaSOptics Profile</label>
    <type>Url</type>
</CustomField>