force-app/main/default/objects/Account/fields/Spanish_Content__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish Content</label>
    <type>Checkbox</type>
</CustomField>