force-app/main/default/objects/Account/fields/Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs__c</fullName>
    <label>Special Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Content</fullName>
            </value>
            <value>
                <fullName>No Embedded Video</fullName>
            </value>
            <value>
                <fullName>No II Canvas</fullName>
            </value>
            <value>
                <fullName>No IS Display</fullName>
            </value>
            <value>
                <fullName>No IS Half Takeover</fullName>
            </value>
            <value>
                <fullName>No IS Takeover Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>