force-app/main/default/objects/Account/fields/Sponsorship_Focus__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Focus__c</fullName>
    <description>for &quot;Brand&quot; or &quot;Agency&quot; type accounts to identify which leagues they focus their sponsorship monies on</description>
    <inlineHelpText>for &quot;Brand&quot; or &quot;Agency&quot; type accounts to identify which leagues they focus their sponsorship monies on</inlineHelpText>
    <label>Sponsorship Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>League</valueSetName>
    </valueSet>
</CustomField>