force-app/main/default/objects/Account/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sport</valueSetName>
    </valueSet>
</CustomField>