force-app/main/default/objects/Account/fields/Sports_Account__c.field-meta.xml
<CustomField>
    <fullName>Sports_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sports Account</label>
    <type>Checkbox</type>
</CustomField>