force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>15% - Prospecting</fullName>
            </value>
            <value>
                <fullName>25% - Responsive</fullName>
            </value>
            <value>
                <fullName>50% - Negotiation</fullName>
            </value>
            <value>
                <fullName>75% - Closing</fullName>
            </value>
            <value>
                <fullName>100% - Closed/Won!</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Intro Call</fullName>
            </value>
            <value>
                <fullName>CV Demo with DMs</fullName>
            </value>
            <value>
                <fullName>Workflow Demo with Top DDS</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Terms</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Bad Fit</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed/Denied</fullName>
            </value>
            <value>
                <fullName>Approach</fullName>
                <isActive>false</isActive>
                <label>Approach</label>
            </value>
            <value>
                <fullName>In contact</fullName>
                <isActive>false</isActive>
                <label>In contact</label>
            </value>
            <value>
                <fullName>Live - PMP</fullName>
                <isActive>false</isActive>
                <label>Live - PMP</label>
            </value>
            <value>
                <fullName>Live - RTB</fullName>
                <isActive>false</isActive>
                <label>Live - RTB</label>
            </value>
            <value>
                <fullName>Request - Call</fullName>
                <isActive>false</isActive>
                <label>Request - Call</label>
            </value>
            <value>
                <fullName>Request - Call 2</fullName>
                <isActive>false</isActive>
                <label>Request - Call 2</label>
            </value>
            <value>
                <fullName>Request - LI</fullName>
                <isActive>false</isActive>
                <label>Request - LI</label>
            </value>
            <value>
                <fullName>Request - Mail</fullName>
                <isActive>false</isActive>
                <label>Request - Mail</label>
            </value>
            <value>
                <fullName>Request - Mail 2</fullName>
                <isActive>false</isActive>
                <label>Request - Mail 2</label>
            </value>
            <value>
                <fullName>Request - Web</fullName>
                <isActive>false</isActive>
                <label>Request - Web</label>
            </value>
            <value>
                <fullName>Request - Web 2</fullName>
                <isActive>false</isActive>
                <label>Request - Web 2</label>
            </value>
            <value>
                <fullName>Request -LI 2</fullName>
                <isActive>false</isActive>
                <label>Request -LI 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>