force-app/main/default/objects/Account/fields/Strat_Acct_Lbl_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Strat_Acct_Lbl_TEMP__c</fullName>
    <label>Strategic Account Parent Account</label>
    <length>140</length>
    <type>Text</type>
</CustomField>