force-app/main/default/objects/Account/fields/Strategic_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Accounts__c</fullName>
    <label>Strategic Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2017 Strategic Account</fullName>
            </value>
            <value>
                <fullName>2018 Strategic Account</fullName>
            </value>
            <value>
                <fullName>2018 Q3 Strategic Account</fullName>
            </value>
            <value>
                <fullName>2018 Q4 Strategic Account</fullName>
            </value>
            <value>
                <fullName>2019 1H Strategic Account</fullName>
            </value>
            <value>
                <fullName>2019 2H Strategic Account</fullName>
            </value>
            <value>
                <fullName>2020 1H Strategic Account</fullName>
            </value>
            <value>
                <fullName>2020 Strategic Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>