force-app/main/default/objects/Account/fields/Strategic_Marketing_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Marketing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Growth Account</label>
    <type>Checkbox</type>
</CustomField>