force-app/main/default/objects/Account/fields/Strategic_Marketing_Influenced__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Marketing_Influenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Brand direct Strategic Marketing influenced accounts</description>
    <label>Strategic Marketing Influenced</label>
    <type>Checkbox</type>
</CustomField>