force-app/main/default/objects/Account/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <type>TextArea</type>
</CustomField>