force-app/main/default/objects/Account/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>