force-app/main/default/objects/Account/fields/Territory_Sports__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sports__c</fullName>
    <description>Temporary field to assist in account cleanup and segmentation for the Sports Sales org</description>
    <inlineHelpText>Temporary field to assist in account cleanup and segmentation for the Sports Sales org</inlineHelpText>
    <label>Territory (Sports)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territory_Sports</valueSetName>
    </valueSet>
</CustomField>