force-app/main/default/objects/Account/fields/Total_ARR_Client__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR_Client__c</fullName>
    <description>If Client, what is the total of bookings that they are currently contracted to?</description>
    <inlineHelpText>If Client, what is the total of bookings that they are currently contracted to?</inlineHelpText>
    <label>Total ARR (Client)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>