force-app/main/default/objects/Account/fields/Total_MRR_Client1__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR_Client1__c</fullName>
    <formula>Total_ARR_Client__c / 12</formula>
    <label>Total MRR (Client)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>