force-app/main/default/objects/Account/fields/Total_Ordered_Amount_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered_Amount_Dollars__c</fullName>
    <label>Total Ordered Amount Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>