force-app/main/default/objects/Account/fields/Total_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Total_Pipeline__c</fullName>
    <label>Total Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>