force-app/main/default/objects/Account/fields/Total_Recognized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Recognized_Revenue__c</fullName>
    <description>Total amount that client has paid GGS (Manual update from SaaSOptics)</description>
    <inlineHelpText>Total amount that client has paid GGS (Manual update from SaaSOptics)</inlineHelpText>
    <label>Total Recognized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>