force-app/main/default/objects/Account/fields/Total_Revenue_Generated_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Generated_del__c</fullName>
    <description>All time revenue from the account. Automatically calculated.</description>
    <inlineHelpText>All time revenue from the account. Automatically calculated.</inlineHelpText>
    <label>Revenue Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>