force-app/main/default/objects/Account/fields/Traffic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Origin__c</fullName>
    <label>Traffic Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>