force-app/main/default/objects/Account/fields/Units_Supported__c.field-meta.xml
<CustomField>
    <fullName>Units_Supported__c</fullName>
    <label>Units Supported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Image</fullName>
            </value>
            <value>
                <fullName>In-Screen</fullName>
            </value>
            <value>
                <fullName>Slot</fullName>
            </value>
            <value>
                <fullName>In-Content Video</fullName>
                <isActive>false</isActive>
                <label>In-Content Video</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>