force-app/main/default/objects/Account/fields/Upsell__c.field-meta.xml
<CustomField>
    <fullName>Upsell__c</fullName>
    <formula>(ISPICKVAL(Media_Channel_Broadcast__c , &quot;No&quot;) || 
(ISPICKVAL(Media_Channel_Social__c , &quot;No&quot;) || 
(ISPICKVAL(Media_Channel_Streaming__c , &quot;No&quot;) || 
(ISPICKVAL(Auto_Collections__c , &quot;No&quot;)))))</formula>
    <label>Upsell?</label>
    <type>Checkbox</type>
</CustomField>