force-app/main/default/objects/Account/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
                <isActive>false</isActive>
                <label>Awards</label>
            </value>
            <value>
                <fullName>Creative</fullName>
                <isActive>false</isActive>
                <label>Creative</label>
            </value>
            <value>
                <fullName>Shipping &amp; Handling</fullName>
                <isActive>false</isActive>
                <label>Shipping &amp; Handling</label>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
                <isActive>false</isActive>
                <label>Strategic Partner</label>
            </value>
            <value>
                <fullName>Swag</fullName>
                <isActive>false</isActive>
                <label>Swag</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>